Fix stuff that was broken